--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<meta name="google-site-verification" content="W1v-WaZxlTYg-1jCT0o2tuUeA4nGYR4K80W2ZHS091c" />
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
