--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<meta name="google-site-verification" content="W1v-WaZxlTYg-1jCT0o2tuUeA4nGYR4K80W2ZHS091c" />
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Google Search Console Verification -->
+<meta name="google-site-verification" content="W1v-WaZxlTYg-1jCT0o2tuUeA4nGYR4K80W2ZHS091c" />
+
 <meta name="description" content="A curated collection of cloud stacking links for Anime Slayer and Stick War Legacy MOD APK, organized for easy access and SEO purposes.">
 <meta name="keywords" content="Anime Slayer, Stick War Legacy MOD APK, cloud stacking links, free games, APK links">
 <title>Anime Slayer & Stick War Legacy MOD APK Cloud Stacking Links</title>
+
 <style>
 body {
     font-family: Arial, sans-serif;
@@ -43,7 +45,7 @@ ul {
 <body>
 
 <h1>Anime Slayer & Stick War Legacy MOD APK Cloud Stacking Links</h1>
-<p>This page contains a collection of curated cloud stacking links for Anime Slayer and Stick War Legacy MOD APK. These links are organized for easy access and reference. Use them responsibly for indexing, testing, or personal use.</p>
+<p>This page contains a curated collection of cloud stacking links for Anime Slayer and Stick War Legacy MOD APK. Organized for easy access and indexing.</p>
 
 <div class="section">
     <h2>Anime Slayer Cloud Stacking Links</h2>
